--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
   <textarea readonly style="display: none" name="output_bookmarklet_code" id="output_bookmarklet_code" cols="50"
     rows="4"></textarea>
 
-  <p id="new_bookmarklet_msg" style="display: none">Delete the old bookmark, and Drag this new one:
+  <p id="new_bookmarklet_msg" style="display: none">Delete the old bookmarklet, and Drag this new one to bookmark bar:
     <a id="new_bookmarklet_link" class="button" href="#" target="">
-      ⏩Linkedin Autoconnect
-    </a>
+      🤩Bookmarklet
+    </a>. You can rename the bookmarklet by right clicking it, and editing it.
   </p>
 
 </body>
