--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   <p id="new_bookmarklet_msg" style="display: none">Delete the old bookmarklet, and Drag this new one to bookmark bar:
     <a id="new_bookmarklet_link" class="button" href="#" target="">
       🤩Bookmarklet
-    </a>. You can rename the bookmarklet by right clicking it, and edit bookmarklet.
+    </a>. You can rename the bookmarklet by right clicking it, and edit bookmark.
   </p>
 
 </body>
